# auto-contract-service

./: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_ollama.py
adapters/: ai_client.py  ollama_adapter.py  ollama_client.py
models/: schemas.py
routes/: analyze.py  templates.py
services/: template_service.py
static/: index.html
templates/: index.html
