[project]
name = "auto-contract-service"
version = "0.1.0"
description = "Gerador local de propostas com IA usando Groq"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pdfplumber>=0.11.0",
    "fpdf2>=2.7.9",
    "python-multipart>=0.0.9",
    "python-decouple>=3.8",
    "httpx>=0.27.0",
    "python-docx>=1.1.0",
]
